<resources>
    <string name="app_name">Registro Asistencia</string>
    <string name="inicio_de_sesion">Inicio de sesion</string>
    <string name="usuario">Usuario</string>
    <string name="iniciar_sesion">Iniciar sesion</string>
    <string name="olvidastes_tu_contrase_a">Olvidastes tu contraseña?</string>
    <string name="ingresa_tu_usuario_y_contrase_a_para_ingresar">Ingresa tu usuario y contraseña para ingresar</string>
    <string name="entra_aqui">Entra aqui</string>
    <string name="contrase_a">Contraseña</string>


</resources>