<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:freezesText="false"
        android:gravity="center"
        android:text="@string/inicio_de_sesion"
        android:textColor="#314C80"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Email"
        android:layout_width="495dp"
        android:layout_height="63dp"
        android:layout_marginTop="132dp"
        android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:paddingVertical="10dp"
        android:text="@string/usuario"
        android:textColor="#0D0D0F"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"/>

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="482dp"
        android:layout_height="61dp"
        android:layout_marginTop="76dp"
        android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"
        android:backgroundTintMode="add"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.36"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Email"/>

    <Button
        android:id="@+id/button"
        style="@android:style/Widget.Holo.Light.Button.Toggle"
        android:layout_width="325dp"
        android:layout_height="55dp"
        android:layout_marginTop="48dp"
        android:scrollbarStyle="insideOverlay"
        android:shadowColor="#202D7C"
        android:text="@string/iniciar_sesion"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.565"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2"
        app:shapeAppearance="@style/Base.Theme.RegistroAsistencia" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="187dp"
        android:layout_height="30dp"
        android:text="@string/olvidastes_tu_contrase_a"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.253"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="0.342" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="335dp"
        android:layout_height="27dp"
        android:layout_marginTop="44dp"
        android:text="@string/ingresa_tu_usuario_y_contrase_a_para_ingresar"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.598"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="102dp"
        android:layout_height="29dp"
        android:layout_marginTop="48dp"
        android:text="@string/entra_aqui"
        android:textColor="#1976D2"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="0.038" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="105dp"
        android:layout_height="33dp"
        android:layout_marginStart="8dp"
        android:text="@string/contrase_a"
        android:textAlignment="center"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.513" />
</androidx.constraintlayout.widget.ConstraintLayout>